tests/ui/imports/import3.stderr
error[E0432]: unresolved import `main`
  --> $DIR/import3.rs:2:5
   |
LL | use main::bar;
   |     ^^^^ you might be missing crate `main`
   |
   = help: consider adding `extern crate main` to use the `main` crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
