tests/ui/imports/import3.rs
// error-pattern: unresolved
use main::bar;

fn main() { println!("foo"); }
